# surrey-canine-mocap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO_LIST.txt  scene_graph.dia
blender/: script.py
cmakeModules/: FindKDL.cmake
dependencies/IKAN/include/IKAN/: trig.h
dependencies/IKAN/src/: myvec.cxx  srs.cxx  trig.cxx
src/: BVHFormat.cpp  BVHFormat.h  BodyFitter.cpp  BodyFitter.h  BonePosFinder.cpp  BonePosFinder.h  CameraCalibrator.cpp  CameraCalibrator.h  CloudClusterer.cpp  CloudClusterer.h  CommonFitter.cpp  CommonFitter.h  CompMethods.h  CudaVec.h  DebugUtil.h  DepthMapPoly.cpp  DepthMapPoly.h  DepthMapSurfel.cpp  DepthMapSurfel.h  EnhancedIKSolver.cpp  EnhancedIKSolver.h  Extras.cpp  Extras.h  IKSolver.cpp  IKSolver.h  KNNSearch.cpp  KNNSearch.h  LegFitter.cpp  LegFitter.h  MessageHandler.cpp  MessageHandler.h  MiscUtils.cpp  MiscUtils.h  MocapData.cpp  MocapData.h  MocapHeader.cpp  MocapHeader.h  MultiCamViewer.cpp  MultiCamViewer.h  Node.cpp  (+38 more)
src/Controller/: CameraCalibrator.cpp  CameraCalibrator.h  GroundTruth.cpp  GroundTruth.h  MultiCamViewer.h  PixelSearch.cpp  PixelSearch.h  Projections.h  SkeletonController.cpp  SkeletonController.h  SkeletonMixer.cpp  SkeletonMixer.h  SkeletonState.cpp  SkeletonState.h  Skeletonization2D.cpp  Skeletonization2D.h  Skeletonization3D.cpp  Skeletonization3D.h
src/Controller/Fitting/: BodyFitter.cpp  BodyFitter.h  BonePosFinder.cpp  BonePosFinder.h  CloudClusterer.cpp  CloudClusterer.h  CommonFitter.cpp  CommonFitter.h  CompMethods.h  EnhancedIKSolver.cpp  EnhancedIKSolver.h  IKSolver.cpp  IKSolver.h  KNNSearch.cpp  KNNSearch.h  LegFitter.cpp  LegFitter.h  SkeletonFitting.cpp  SkeletonFitting.h
src/IKAN/: myvec.cxx  myvec.h  srs.cxx  srs.h  trig.cxx  trig.h
src/Misc/: DebugUtil.h  MiscUtils.cpp  MiscUtils.h  SimpleTimer.cpp  SimpleTimer.h
src/Model/: BVHFormat.cpp  MocapData.cpp  MocapHeader.cpp  Node.cpp  Node.h  PointCloud.cpp  PointCloud.h  Skeleton.cpp  Skeleton.h
src/View/: DepthMapPoly.cpp  DepthMapPoly.h  DepthMapSurfel.cpp  DepthMapSurfel.h  PointFusion.cpp  PointFusion.h  RGBDCamera.cpp  RGBDCamera.h  RGBDFrame.cpp  RGBDFrame.h  RenderPOV.h  RenderSkeletonization.cpp  RenderSkeletonization.h  SurfelModel.h
